# spotykach-sporadic

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  main.cpp
src/: CMakeLists.txt  Deck.cpp  Deck.h  DelayNetwork.cpp  DelayNetwork.h  DelayNodes.cpp  DelayNodes.h  DelayProc.cpp  DelayProc.h  DiffusionControl.cpp  DiffusionControl.h  Dispersion.cpp  Dispersion.h  EdgeTree.cpp  EdgeTree.h  Effect.cpp  Effect.h  InputSculpt.cpp  InputSculpt.h  Modulation.cpp  Modulation.h  Sporadic.cpp  Sporadic.h  Spotykach.cpp  Spotykach.h  Utils.h  app.cpp  app.h  color.cpp  color.h  common.h  constants.h  hardware.cpp  hardware.h  sr_165.cpp  sr_165.h  ws2812.cpp  ws2812.h
